Quick styling fix for homepage on mobile devices.

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -480,7 +480,7 @@ span.disabled {
 }
 
 .hero * {
-	margin: 15pt;
+	margin: 5pt;
 }
 
 .hero.top {
@@ -488,7 +488,8 @@ span.disabled {
 }
 
 .hero.bottom {
-	margin-bottom: 0;
+	margin: 0;
+	margin-top: 15pt;
 }
 
 .hero img {
